[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/IconPackAndelRodis/IconPackByAndelRodis/pngonebyone/playbuttonpdn.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Fadeout.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=3]
[ext_resource path="res://Sprites/IconPackAndelRodis/IconPackByAndelRodis/pngonebyone/cashbag.png" type="Texture" id=4]
[ext_resource path="res://Sprites/IconPackAndelRodis/IconPackByAndelRodis/pngonebyone/musicoff.png" type="Texture" id=5]
[ext_resource path="res://Fonts/Born2bSportyV2 (1).ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Sprites/Grade.png" type="Texture" id=7]
[ext_resource path="res://Scenes/ParallaxBackground.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 107
outline_size = 7
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="StreamTexture" id=2]
load_path = "res://.import/Grade.png-b2a8e915deed7733f20128bc32bc0f1d.stex"

[node name="Menu" type="Node2D"]
position = Vector2( 122, 291 )
script = ExtResource( 3 )

[node name="CanvasLayer2" parent="." instance=ExtResource( 2 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="Play" type="Button" parent="CanvasLayer"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -237.0
margin_right = 672.0
margin_bottom = 30.0
rect_scale = Vector2( 0.222, 0.7 )
action_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
position = Vector2( 356.359, 496.175 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="CanvasLayer"]
margin_left = 589.972
margin_top = 1150.4
margin_right = 1201.97
margin_bottom = 1756.4
rect_scale = Vector2( 0.2, 0.2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="CanvasLayer"]
position = Vector2( 651.197, 1211.45 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="Button2" type="Button" parent="CanvasLayer"]
margin_left = 1.24737
margin_top = 1150.9
margin_right = 613.247
margin_bottom = 1756.9
rect_scale = Vector2( 0.2, 0.2 )
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = -10.0
margin_top = -219.888
margin_right = 742.0
margin_bottom = -91.888
custom_fonts/font = SubResource( 1 )
text = "Flappy Foods"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grade" type="Sprite" parent="."]
visible = false
modulate = Color( 0.364706, 0.921569, 1, 1 )
position = Vector2( 396.4, 792.768 )
scale = Vector2( 5.771, 4.448 )
texture = SubResource( 2 )

[node name="Floor2" type="Sprite" parent="."]
visible = false
modulate = Color( 0.364706, 0.921569, 1, 1 )
position = Vector2( 624.577, 807.016 )
scale = Vector2( 7.542, 3.87702 )
z_index = -1
texture = ExtResource( 7 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 8 )]

[connection signal="pressed" from="CanvasLayer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button2" to="." method="_on_Button2_pressed"]
